# ec-im-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  admin_server.py  api_client.py  config.py  formatters.py  install.sh  main.py  pyproject.toml  result_queue.py  vault.py  worker.py
.github/workflows/: release.yml
executors/: __init__.py  base.py  database.py  email.py  http.py  jira.py  kubernetes.py  notification.py  os_service.py  script.py  slack.py  ssh.py  teams.py  winrm.py
formatters/: __init__.py  email_formatter.py  slack_formatter.py  teams_formatter.py
tests/: conftest.py  test_circuit_breaker.py  test_executors.py  test_vault.py
