[project]
name = "ec-im-agent"
version = "0.1.0"
description = "EasyAlert Automation Agent"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=43.0",
    "asyncssh>=2.17",
    "aiohttp>=3.10",
    "aiosmtplib>=3.0",
    "psutil>=6.0",
    "pywinrm>=0.4",
]

[project.optional-dependencies]
database = [
    "asyncpg>=0.30",
    "aiomysql>=0.2",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
